--- a/newcontact.html
+++ b/newcontact.html
@@ -18,7 +18,7 @@ VERSION:3.0
 PRODID:-//Apple Inc.//iPhone OS 14.6//EN
 N:`+last+`;`+first+`;;;
 FN:`+first+` `+last+`
-EMAIL;type=INTERNET;type=HOME;type=pref:`+email+`
+EMAIL;type=INTERNET;type=HOME;type=pref:`+email+`@gmail.com
 TEL;type=CELL;type=VOICE;type=pref:`+num+`
 END:VCARD`);
 
