--- a/index.html
+++ b/index.html
@@ -89,22 +89,18 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			}
 			.bottomButtonTable {
 			}
-		.div8831
+		#div8831
 			 position:absolute;
 			width:15%;
-			
-			}
-			.div8831 img {
-			display:block;	
-			}
-			#div8831Right {
 			text-align:right;
-			right:0;	
+			right:0;
 			}
-			#div8831Left {
-				text-align:left;
-			left:0;
+			#div8831 img {
+			display:block;	
+		
+				
 			}
+			
 			
 	</style>
 	</head>
@@ -165,10 +161,10 @@ I8,      ,8'
 <div id="feedcont">
 	
 	
-	<div class="div8831" id="div8831Left">
+	<div>
 <img src="/assets/8831/jund.png">
 	</div>
-<div class="div8831" id="div8831Right">
+<div>
 			<img src="/assets/8831/anarchy1.gif">
 			<img src="/assets/8831/aolim.gif">
 				<img src="/assets/8831/chrmevil.gif">
