--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			}
 			.bottomButtonTable {
 			}
-		#div8831
+#div8831 {
 			 position:absolute;
 			width:15%;
 			text-align:right;
@@ -97,8 +97,6 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			}
 			#div8831 img {
 			display:block;	
-		
-				
 			}
 			
 			
@@ -164,7 +162,7 @@ I8,      ,8'
 	<div>
 <img src="/assets/8831/jund.png">
 	</div>
-<div>
+<div id="div8831">
 			<img src="/assets/8831/anarchy1.gif">
 			<img src="/assets/8831/aolim.gif">
 				<img src="/assets/8831/chrmevil.gif">
