--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ I8,      ,8'
 	
 	
 	<div>
-<img src="/assets/8831/jund.png">
+<img src="/assets/8831/jund8831.png">
 	</div>
 <div id="div8831">
 			<img src="/assets/8831/anarchy1.gif">
