--- a/index.html
+++ b/index.html
@@ -98,6 +98,16 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			#div8831 img {
 			display:block;	
 			}
+			#div8831other {
+			position:absolute;
+			width:15%;
+			text-align:right;
+			left:0;	
+			}
+			#div8831other img {
+			display:block;	
+			}
+			
 			
 			
 	</style>
