--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ I8,      ,8'
 <div id="feedcont">
 	
 	
-	<div>
+	<div id="div8831other">
 <img src="/assets/8831/jund8831.png">
 	</div>
 <div id="div8831">
