--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@ I8,      ,8'
 	
 	<div id="div8831other">
 <img src="/assets/8831/jund8831.png">
+				<b>affiliates</b>
+		<img src="/assets/8831/acebutton.gif">
+
 	</div>
 <div id="div8831">
 			<img src="/assets/8831/anarchy1.gif">
