--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			width:15%;
 			text-align:right;
 			left:0;	
+				color: white !important;
 			}
 			
 			
