--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			left:0;	
 				color: white !important;
 			}
-			
+			#div8831other img {
+				display:inline-block;
+right:0;
+			}
 			
 			
 			
