--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ I8,      ,8'
 	<div id="div8831other">
 <img src="/assets/8831/jund8831.png">
 				<b>affiliates</b>
-		<img src="/assets/8831/acebutton.gif">
+		<a href="https://acebit.neocities.org/"><img src="/assets/8831/acebutton.gif"></a>
 
 	</div>
 <div id="div8831">
