--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ I8,      ,8'
 
 <h5 class="sectionHeader">~affiliates~</h5>
 	<a href="https://acebit.neocities.org/"><img src="/assets/8831/acebutton.gif"></a>
-<i>jamesunderwood.net 88x31</i>	
+<p><i>jamesunderwood.net 88x31</i></p>
 <img src="/assets/8831/jund8831.png">
 	</div>
 				
