--- a/index.html
+++ b/index.html
@@ -298,8 +298,10 @@ I8,      ,8'
    data-tld="me"></p>
 		
 
-<h5 class="sectionHeader">~affiliates~</h5>
+<h5 class="sectionHeader">~cool sites~</h5>
 	<a href="https://acebit.neocities.org/"><img src="/assets/8831/acebutton.gif"></a>
+	<a href="https://www.tdpain.net//"><img src="/assets/8831/tdpain.png"></a>
+
 <p><i>jamesunderwood.net 88x31</i></p>
 <img src="/assets/8831/jund8831.png">
 	</div>
