--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ I8,      ,8'
 
 <h5 class="sectionHeader">~cool sites~</h5>
 	<a href="https://acebit.neocities.org/"><img src="/assets/8831/acebutton.gif"></a>
-	<a href="https://www.tdpain.net/"><img src="/assets/8831/tdpain.png"></a>
+	<a href="https://www.tdpain.net/"><img src="https://www.tdpain.net/assets/img/graphics/button.png"></a>
 
 <p><i>jamesunderwood.net 88x31</i></p>
 <img src="/assets/8831/jund8831.png">
