--- a/cemeteryphotography/index.html
+++ b/cemeteryphotography/index.html
@@ -128,7 +128,7 @@ Convienently located behind a Safeway gas station, the Bickett-Richards cemetery
      <tr>
         <td>
         <h1>Union Cemetery</h1>
-          <p>The Legg-Walcut Cemetery, located , . It contains about 25 headstones.</p>
+          <p>Established in 1847, <a href="https://en.wikipedia.org/wiki/Union_Cemetery_(Columbus)">Union Cemetery</a> is the resting place of more than 66,000 individuals. Pleasant Litchford, a former enslaved person who settled much of the land that is now Upper Arlington, is buried here.</p>
         </td>
 <td>          
 <img class="cempic" src="union1.jpg">       
