--- a/index.html
+++ b/index.html
@@ -206,6 +206,13 @@ I8,      ,8'
 ~latest~
 	</h5>
 				<ul>
+					
+					<li>
+						<span class="latestTag">Blog</span>
+						<a href="/cemeteryphotography">Cemetery photography</a>
+						<span class="smoldate">2022</span>
+					</li>
+					
 					<!-- <li>
 						<span class="latestTag">Arlingtonian</span>
 						<a href="https://www.arlingtonian.com/archives/25685" target="_BLANK">Misquoted</a>
