--- a/cemeteryphotography/index.html
+++ b/cemeteryphotography/index.html
@@ -49,7 +49,12 @@ color: white;
 &ldquo;The grave is but the threshold of eternity.&rdquo;
 </blockquote>
 <i>&mdash; <a href="https://en.wikipedia.org/wiki/Robert_Southey">Robert Southey</a>, 1796</i>
-
+<p>
+  Yashica FR I &bull; Kodak Portra 400
+    </p>
+    <p>
+      <small>Note: These images are compressed versions of the originals. Full-size versions available on request.</small>
+    </p>
 
   </div>
 
