--- a/autoannouncer/index.html
+++ b/autoannouncer/index.html
@@ -23,7 +23,7 @@ background-image: url("water.gif");
   
   <ul>
     <li><a href="https://github.com/realjunderwood/RRWP-AutoAnnouncer/releases/download/v1.0.1/AutoAnnouncer-win32-ia32.zip">Download v1.0.1 (Windows)</a></li>
-    <li>Download v1.0.1 (MacOS) <small>COMING SOON</small></li>
+    <li>Download v1.0.1 (MacOS port) <small>COMING SOON</small></li>
     <li><a href="https://github.com/realjunderwood/RRWP-AutoAnnouncer">Source</a></li>
   </ul>
   <h3>Web demo</h3>
