--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			display:block;	
 			}
 			
-			
+		.social {
+			display:inline-block;
+			}
 			
 			
 	</style>
@@ -153,7 +155,15 @@ I8,      ,8'
 					</td>
 					</tr>
 				</table>
-			
+			<div style="background:silver;margin-left:20%;margin-right:20%;">
+
+		<div class="social">spotify</div>
+		<div class="social">steam</div>
+		<div class="social">goodreads</div>
+			<div class="social">letterboxd</div>
+			<div class="social">instagram</div>
+
+	</div>
 			
 
 <div id="feedcont">
