--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			
 		.social {
 			display:inline-block;
+			background:white;
+			color:black !important;
 			}
 			
 			
