--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ I8,      ,8'
 					</tr>
 				</table>
 			<div style="background:silver;margin-left:20%;margin-right:20%;">
-
+				<span><bold>socials: </bold></span>
 		<div class="social">spotify</div>
 		<div class="social">steam</div>
 		<div class="social">goodreads</div>
