--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			display:inline-block;
 			background:white;
 			color:black !important;
+			position:fixed;
+			}
+			.social::hover {
+						margin-bottom:5px;
+	
 			}
 			
 			
