--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			color:black !important;
 			position:fixed;
 			}
-			.social::hover {
+			.social:hover {
 						margin-bottom:5px;
 	
 			}
