--- a/index.html
+++ b/index.html
@@ -102,10 +102,17 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			background:white;
 			color:black !important;
 			position:fixed;
+			margin-left:5px;
+			margin-right:5px;
+			padding:0;
 			}
 			.social:hover {
-						margin-bottom:5px;
-	
+margin-right:1px;
+				margin-left:1px;
+				padding-left:4px;
+				padding-right:4px;
+				
+				
 			}
 			
 			
