--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			}
 			#div8831 img {
 			display:block;	
+				position:absolute;
 			}
 			
 		.social {
 			display:inline-block;
 			background:white;
 			color:black !important;
-			position:fixed;
 			margin-left:5px;
 			margin-right:5px;
 			padding:0;
