--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@ margin-left:15%;
 margin-right:15%;
 		background-image: url("/assets/lightblueweave.gif");
 		
+
+		
+		
 			}
 
 .latestTag {
@@ -104,6 +107,8 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			margin-left:5px;
 			margin-right:5px;
 			padding:0;
+					  transition-property: margin-left 1s, margin-right 1s, padding left 1s, padding right 1s;
+
 			}
 			.social:hover {
 margin-right:1px;
