--- a/index.html
+++ b/index.html
@@ -181,8 +181,12 @@ I8,      ,8'
 
 				<div class="social">instagram</div>
 			<div class="social">letterboxd</div>
+										<div class="social">pinterest</div>
+
 				<div class="social">spotify</div>
 		<div class="social">steam</div>
+						<div class="social">twitter</div>
+
 
 	</div>
 			
