--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@ I8,      ,8'
 				</table>
 			<div style="background:silver;margin-left:20%;margin-right:20%;">
 				<span><bold>socials: </bold></span>
-		
+				<div class="social">discord</div>
+
 		<div class="social">goodreads</div>
 
 				<div class="social">instagram</div>
