--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			margin-left:5px;
 			margin-right:5px;
 			padding:0;
-					  transition: margin-left 1s, margin-right 1s, padding left 1s, padding right 1s;
+					  transition: margin-left 0.25s, margin-right 0.25s, padding-left 0.25s, padding-right 0.25s;
 
 			}
 			.social:hover {
