--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			margin-left:5px;
 			margin-right:5px;
 			padding:0;
-					  transition: margin-left 0.25s, margin-right 0.25s, padding-left 0.25s, padding-right 0.25s;
+					  transition: margin-left 0.25s, margin-right 0.25s, padding-left 0.25s, padding-right 0.25s, background 0.25s;
 
 			}
 			.social:hover {
@@ -116,7 +116,7 @@ margin-right:1px;
 				margin-left:1px;
 				padding-left:4px;
 				padding-right:4px;
-				
+				background:silver;
 				
 			}
 			
@@ -174,7 +174,7 @@ I8,      ,8'
 					</td>
 					</tr>
 				</table>
-			<div style="background:silver;margin-left:20%;margin-right:20%;">
+			<div style="background:gray;margin-left:20%;margin-right:20%;">
 				<span><bold>socials: </bold></span>
 				<div class="social">discord</div>
 
