--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 
 			}
 			.social:hover {
-margin-right:1px;
-				margin-left:1px;
-				padding-left:4px;
-				padding-right:4px;
-				background:silver;
-				
+margin-right:0.5px;
+				margin-left:0.5px;
+				padding-left:4.5px;
+				padding-right:4.5px;
+				background:#ebebeb;
+				letter-spacing:2px;
 			}
 			
 			
@@ -174,7 +174,7 @@ I8,      ,8'
 					</td>
 					</tr>
 				</table>
-			<div style="background:gray;margin-left:20%;margin-right:20%;">
+			<div style="background:silver;margin-left:20%;margin-right:20%;">
 				<span><bold>socials: </bold></span>
 				<div class="social">discord</div>
 
