--- a/index.html
+++ b/index.html
@@ -100,7 +100,13 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			#div8831 img {
 			display:block;	
 			}
-			
+			#socialContainer {
+			background:silver;
+				margin-left:15%;
+				margin-right:15%;	
+				border-top-left-radius:15px;
+				border-top-right-radius:15px;
+			}
 		.social {
 			display:inline-block;
 			background:white;
@@ -174,7 +180,7 @@ I8,      ,8'
 					</td>
 					</tr>
 				</table>
-			<div style="background:silver;margin-left:15%;margin-right:15%;">
+			<div id="socialContainer">
 				<span><bold>socials: </bold></span>
 				<div class="social">discord</div>
 
