--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			margin-left:5px;
 			margin-right:5px;
 			padding:0;
-					  transition: margin-left 0.25s, margin-right 0.25s, padding-left 0.25s, padding-right 0.25s, background 0.25s;
+					  transition: margin-left 0.25s, margin-right 0.25s, padding-left 0.25s, padding-right 0.25s, background 0.25s, letter-spacing 0.25s;
 
 			}
 			.social:hover {
