--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 			background:silver;
 				margin-left:15%;
 				margin-right:15%;	
-				border-top-left-radius:15px;
-				border-top-right-radius:15px;
+				border-top-left-radius:10px;
+				border-top-right-radius:10px;
+				padding-left:10px;
+				padding-right:10px;
 			}
 		.social {
 			display:inline-block;
