--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@ I8,      ,8'
 				<span><bold>socials: </bold></span>
 				<div class="social">discord</div>
 
-		<div class="social">goodreads</div>
+				<div class="social"><a href="https://www.goodreads.com/user/show/153388050-j-u">goodreads</a></div>
 
-				<div class="social">instagram</div>
+				<div class="social"><a href="https://instagram.com/junderwooood"><a>instagram</a></div>
 			<div class="social">letterboxd</div>
-										<div class="social">pinterest</div>
+				<div class="social"><a href="https://www.pinterest.com/conjuredmeadows/">pinterest</a></div>
 
 				<div class="social">spotify</div>
 		<div class="social">steam</div>
