--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@ I8,      ,8'
 
 				<div class="social"><a href="https://www.goodreads.com/user/show/153388050-j-u">goodreads</a></div>
 
-				<div class="social"><a href="https://instagram.com/junderwooood"><a>instagram</a></div>
+				<div class="social"><a href="https://instagram.com/junderwooood">instagram</a></div>
 			<div class="social">letterboxd</div>
 				<div class="social"><a href="https://www.pinterest.com/conjuredmeadows/">pinterest</a></div>
 
-				<div class="social">spotify</div>
+				<div class="social"><a href="https://open.spotify.com/user/73avhoythh23c4thasadw72tz?si=b3a0f79c828946b5">spotify</a></div>
 		<div class="social">steam</div>
 						<div class="social">twitter</div>
 
