--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ I8,      ,8'
 				<div class="social"><a href="https://www.pinterest.com/conjuredmeadows/">pinterest</a></div>
 
 				<div class="social"><a href="https://open.spotify.com/user/73avhoythh23c4thasadw72tz?si=b3a0f79c828946b5">spotify</a></div>
-		<div class="social">steam</div>
+				<div class="social"><a href="https://steamcommunity.com/id/conjuredmeadows">steam</a></div>
 										<div class="social">tumblr</div>
 
 						<div class="social">twitter</div>
