--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ I8,      ,8'
 				</table>
 			<div id="socialContainer">
 				<span><bold>socials: </bold></span>
-				<div class="social">discord</div>
+				<div class="social"><a href="https://discord.com/users/192057338830651392">discord</a></div>
 				<div class="social"><a href="https://www.goodreads.com/user/show/153388050-j-u">goodreads</a></div>
 				<div class="social"><a href="https://instagram.com/junderwooood">instagram</a></div>
 				<div class="social"><a href="https://letterboxd.com/jayunder/">letterboxd</a></div>
