--- a/index.html
+++ b/index.html
@@ -249,7 +249,12 @@ I8,      ,8'
 ~latest~
 	</h5>
 				<ul>
-					
+										<li>
+						<span class="latestTag">Misc.</span>
+						<a href="notaryinfographic.png">Ohio notary public disciplinary process infographic</a>
+						<span class="smoldate">August 2022</span>
+					</li>
+
 					<li>
 						<span class="latestTag">Blog</span>
 						<a href="/cemeteryphotography">Cemetery photography</a>
