--- a/kjEncrypted/index.html
+++ b/kjEncrypted/index.html
@@ -1,3 +1,6 @@
+ <body>
+   <script src="jsaes.js"></script>
+
 <textarea id="textarea"></textarea>
 <button id="decrypt">
   <button id="encrypt">
@@ -8,3 +11,4 @@
   });
   
 </script>
+    </body>
