--- a/kjEncrypted/index.html
+++ b/kjEncrypted/index.html
@@ -2,8 +2,8 @@
    <script src="jsaes.js"></script>
 
 <textarea id="textarea"></textarea>
-<button id="decrypt">
-  <button id="encrypt">
+<button id="decrypt" value="Decrypt">
+  <button id="encrypt" value="Encrypt">
 
 <script>
   document.getElementById("decrypt").onclick(function(){
