--- a/kjEncrypted/index.html
+++ b/kjEncrypted/index.html
@@ -6,9 +6,9 @@
   <button id="encrypt" value="Encrypt">
 
 <script>
-  document.getElementById("decrypt").onclick(function(){
+  document.getElementById("decrypt").onclick = function(){
     window.alert(document.getElementById("textarea").value);
-  });
+  };
   
 </script>
     </body>
