--- a/kjEncrypted/index.html
+++ b/kjEncrypted/index.html
@@ -2,8 +2,8 @@
    <script src="jsaes.js"></script>
 
 <textarea id="textarea"></textarea>
-<button id="decrypt" value="Decrypt">
-  <button id="encrypt" value="Encrypt">
+  <button id="decrypt">Decrypt</button>
+  <button id="encrypt">Encrypt</button>
 
 <script>
   document.getElementById("decrypt").onclick = function(){
