--- a/kjEncrypted/index.html
+++ b/kjEncrypted/index.html
@@ -1,4 +1,5 @@
- <body>
+<html> 
+<body>
    <script src="jsaes.js"></script>
 
 <textarea id="textarea"></textarea>
@@ -14,3 +15,4 @@
   
 </script>
     </body>
+</html>
