--- a/kjEncrypted/index.html
+++ b/kjEncrypted/index.html
@@ -1,4 +1,12 @@
 <html> 
+   <head>
+      <style>
+         textarea {
+            height:50%;
+            width:50%;
+         }
+      </style>
+   </head>
 <body>
    <script src="jsaes.js"></script>
 
