--- a/kjEncrypted/index.html
+++ b/kjEncrypted/index.html
@@ -11,6 +11,7 @@
    <script src="jsaes.js"></script>
 
 <textarea id="textarea"></textarea>
+   <input type="text" placeholder="Key">
   <button id="decrypt">Decrypt</button>
   <button id="encrypt">Encrypt</button>
  
