--- a/kjEncrypted/index.html
+++ b/kjEncrypted/index.html
@@ -4,6 +4,7 @@
          textarea {
             height:50%;
             width:50%;
+            font-family: Arial;
          }
       </style>
    </head>
