--- a/kjEncrypted/index.html
+++ b/kjEncrypted/index.html
@@ -18,10 +18,22 @@
  
 <script>
   document.getElementById("decrypt").onclick = function(){ decrypt() };
+   document.getElementById("encrypt").onclick = function(){ encrypt() };
+
  
- function decrypt() {  
+   
+   function decrypt() {  
  window.alert(document.getElementById("textarea").value);
   }
+   
+   
+   function encrypt ( inputStr,key ) {
+var block = string2Bin(document.getElementById("textarea").value);
+AES_Encrypt(block, key);
+var data=bin2String(block);
+return data;
+      window.alert(data);
+}
   
 </script>
     </body>
