--- a/kjEncrypted/index.html
+++ b/kjEncrypted/index.html
@@ -44,6 +44,13 @@ result += String.fromCharCode(parseInt(array[i], 2));
 }
 return result;
 }
+   function string2Bin(str) {
+var result = [];
+for (var i = 0; i < str.length; i++) {
+result.push(str.charCodeAt(i));
+}
+return result;
+}
    
   
 </script>
