--- a/kjEncrypted/index.html
+++ b/kjEncrypted/index.html
@@ -10,47 +10,35 @@
       </style>
    </head>
 <body>
-   <script src="jsaes.js"></script>
-
+<script type="text/javascript" src="https://cdn.rawgit.com/ricmoo/aes-js/e27b99df/index.js"></script>
+   
 <textarea id="textarea"></textarea>
    <input type="text" placeholder="Key" id="key">
   <button id="decrypt">Decrypt</button>
   <button id="encrypt">Encrypt</button>
  
 <script>
-  document.getElementById("decrypt").onclick = function(){ decrypt() };
+  var key_256 = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15,
+               16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28,
+               29, 30, 31];
+
+   
+   
+   document.getElementById("decrypt").onclick = function(){ decrypt() };
    document.getElementById("encrypt").onclick = function(){ encrypt() };
 
  
    
    function decrypt() {  
- window.alert(document.getElementById("textarea").value);
   }
    
    
    function encrypt () {
-var block = string2Bin(document.getElementById("textarea").value);
-AES_Encrypt(block, document.getElementById("key").value);
-var data=bin2String(block);
-      window.alert(data);
+var textBytes = aesjs.utils.utf8.toBytes(document.getElementById("value").text);
+      var encryptedHex = aesjs.utils.hex.fromBytes(encryptedBytes);
+console.log(encryptedHex);
 }
    
-   
-   
-   function bin2String(array) {
-var result = "";
-for (var i = 0; i < array.length; i++) {
-result += String.fromCharCode(parseInt(array[i], 2));
-}
-return result;
-}
-   function string2Bin(str) {
-var result = [];
-for (var i = 0; i < str.length; i++) {
-result.push(str.charCodeAt(i));
-}
-return result;
-}
    
   
 </script>
