--- a/kjEncrypted/index.html
+++ b/kjEncrypted/index.html
@@ -17,6 +17,11 @@
   <button id="decrypt">Decrypt</button>
   <button id="encrypt">Encrypt</button>
  
+   
+   <div id="outputDiv">
+      <p id="outputP"></p>
+   </div>
+   
 <script>
   var key_256 = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15,
                16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28,
@@ -37,6 +42,7 @@
 var textBytes = aesjs.utils.utf8.toBytes(document.getElementById("textarea").value);
       var encryptedHex = aesjs.utils.hex.fromBytes(encryptedBytes);
 console.log(encryptedHex);
+      document.getElementById("outputP").innerHTML = encryptedHex;
 }
    
    
