--- a/kjEncrypted/index.html
+++ b/kjEncrypted/index.html
@@ -3,52 +3,118 @@
    <head>
       <style>
          textarea {
-            height:50%;
-            width:50%;
+            height:500px;
+            width:95%;
             font-family: Arial;
+resize: vertical;
          }
+#key {
+width:250px;
+}
+#outputP {
+overflow-wrap: anywhere;
+}
+#outputDiv {
+background:silver;
+}
       </style>
    </head>
 <body>
 <script type="text/javascript" src="https://cdn.rawgit.com/ricmoo/aes-js/e27b99df/index.js"></script>
-   
+
+
+<table>
+<tr>
+<td style="width:60%">
+<b>text to encrypt/decrypt:</b><br>   
 <textarea id="textarea"></textarea>
-   <input type="text" placeholder="Key" id="key">
-  <button id="decrypt">Decrypt</button>
+<br>
+<b>key: </b>
+<input minlength="32" maxlength="32" placeholder="" id="key">
+
   <button id="encrypt">Encrypt</button>
+
+  <button id="decrypt">Decrypt</button>
+
+<p><i>Note: the correct key should be 32 characters. The key input box will be red unless the key entered is 32 characters. The input takes on a white background once 32 characters have been entered; however, this does not necessarily mean the correct key has been entered.</i></p>
  
    
+
+</td>
+
+
+<td>
+
+
+
    <div id="outputDiv">
-      <p id="outputP"></p>
+      <span id="outputP"></span>
    </div>
+
+
+</td>
+</tr>
+</table>
    
 <script>
-  var key_256 = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15,
-               16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28,
-               29, 30, 31];
 
-   
+
    
    document.getElementById("decrypt").onclick = function(){ decrypt() };
    document.getElementById("encrypt").onclick = function(){ encrypt() };
 
  
+
+var key2 = [];
+function keyConvert(){
+	key2 = [];
+	for (var i = 0; i < 32; i++){
+		console.log( document.getElementById("key").value.charAt(i).charCodeAt(0) - 96);
+		key2.push( document.getElementById("key").value.charAt(i).charCodeAt(0) - 96);
+	}
+}
+
    
-   function decrypt() {  
-  }
+   function decrypt() { 
+	keyConvert();
+	var encryptedBytes = aesjs.utils.hex.toBytes(document.getElementById("textarea").value);
+	var aesCtr = new aesjs.ModeOfOperation.ctr(key2, new aesjs.Counter(5));
+	var decryptedBytes = aesCtr.decrypt(encryptedBytes);
+	var decryptedText = aesjs.utils.utf8.fromBytes(decryptedBytes);
+	console.log(decryptedText); 
+	document.getElementById("outputP").innerHTML = decryptedText;
+
+    }
    
-   
-   function encrypt () {
-var textBytes = aesjs.utils.utf8.toBytes(document.getElementById("textarea").value);
-     var aesCtr = new aesjs.ModeOfOperation.ctr(key, new aesjs.Counter(5));
-var encryptedBytes = aesCtr.encrypt(textBytes);
-      var encryptedHex = aesjs.utils.hex.fromBytes(encryptedBytes);
-console.log(encryptedHex);
-      document.getElementById("outputP").innerHTML = encryptedHex;
+
+
+
+function encrypt () {
+	keyConvert();
+	var textBytes = aesjs.utils.utf8.toBytes(document.getElementById("textarea").value);
+	var aesCtr = new aesjs.ModeOfOperation.ctr(key2, new aesjs.Counter(5));
+	var encryptedBytes = aesCtr.encrypt(textBytes);
+	var encryptedHex = aesjs.utils.hex.fromBytes(encryptedBytes);
+	console.log(encryptedHex);
+	document.getElementById("outputP").innerHTML = encryptedHex;
 }
    
    
-  
+     document.getElementById("key").oninput = function(){ keyStuff() };
+
+
+document.getElementById("key").style.background = "red";
+
+function keyStuff() {
+if (document.getElementById("key").value.length == 32) {
+document.getElementById("key").style.background = "";
+
+} else {
+document.getElementById("key").style.background = "red";
+}
+
+}
+
 </script>
     </body>
 </html>
