--- a/kjEncrypted/index.html
+++ b/kjEncrypted/index.html
@@ -27,10 +27,10 @@ background:silver;
 <tr>
 <td style="width:60%">
 <b>text to encrypt/decrypt:</b><br>   
-<textarea id="textarea"></textarea>
+<textarea id="textarea" value="" autocomplete="off"></textarea>
 <br>
 <b>key: </b>
-<input minlength="32" maxlength="32" placeholder="" id="key">
+<input minlength="32" maxlength="32" placeholder="" id="key" value="" autocomplete="off">
 
   <button id="encrypt">Encrypt</button>
 
