--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ I8,      ,8'
 
 																<img src="/assets/welcometv.gif" style="width:140px"></img>
 
-<h3>howdy! i am a high school senior in ohio. this is my personal website.</h3>	
+<h3>howdy! i am a high school senior in ohio. this is my personal website. :]</h3>	
 				<h5 class="sectionHeader">
 ~latest~
 	</h5>
