--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -1,3 +1,15 @@
+<link rel="stylesheet" media="screen" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/no_variables/bundles/fonts-43e9c545fc.css">
+<link rel="stylesheet" media="all" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/aabe2b6f9ed88c4f73677cf1b18d2605/variables-7dd4b80918af0e0218ec0229e4bd5873.css">
+<link rel="stylesheet" media="all" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/new_styles_normal_contrast/bundles/common-5a50100f64.css">
+<link rel="stylesheet" media="all" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/new_styles_normal_contrast/bundles/assignments-81a86619c8.css">
+<link rel="stylesheet" media="all" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/new_styles_normal_contrast/bundles/tinymce-59c32fac15.css">
+<link rel="stylesheet" media="all" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/new_styles_normal_contrast/bundles/learning_outcomes-a9a9fe5d8b.css">
+<link rel="stylesheet" media="all" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/new_styles_normal_contrast/bundles/new_user_tutorials-2950c871dd.css">
+<link rel="stylesheet" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/new_styles_normal_contrast/jst/googleDocsTreeView-0a2c3dcf2f.css" data-loaded-by-brandablecss="true">
+<link rel="stylesheet" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/new_styles_normal_contrast/jst/PaginatedView-6d919206cd.css" data-loaded-by-brandablecss="true">
+<link rel="stylesheet" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/new_styles_normal_contrast/jst/TreeBrowser-ebf0e1382f.css" data-loaded-by-brandablecss="true">
+<link rel="stylesheet" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/new_styles_normal_contrast/jst/MoveOutcomeDialog-35936a18c3.css" data-loaded-by-brandablecss="true">
+
 <div id="application" class="ic-app">
   
 
