--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -24,7 +24,7 @@
   <div class="mobile-header-space"></div>
     <a class="mobile-header-title expandable" href="/courses/17906" role="button" aria-controls="mobileContextNavContainer">
       <div>AP World History - 22-23 - Vergis</div>
-        <div>Unit 2 Map Assignment</div>
+        <div>Unit 2 Review Assignment</div>
     </a><div class="ajas-search-widget ajas-search-widget--small" id="ajas-search-widget-mobile">
     <button class="ajas-search-toggle" type="button" aria-label="toggle search"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="-515 337 48 48" enable-background="new -515 337 48 48">
     <path d="M-484,365h-1.6l-0.5-0.5c2-2.3,3.1-5.2,3.1-8.5c0-7.2-5.8-13-13-13s-13,5.8-13,13s5.8,13,13,13c3.2,0,6.2-1.2,8.5-3.1 l0.5,0.5v1.6l10,10l3-3L-484,365z M-496,365c-5,0-9-4-9-9s4-9,9-9s9,4,9,9S-491,365-496,365z"></path>
