--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -980,7 +980,7 @@
     )
   </script>
 
-<link rel="preload" href="https://du11hjcvx0uqb.cloudfront.net/dist/webpack-production/inst_fs_service_worker-c-b523682f21.js" as="script" type="text/javascript"><script>
+<link rel="preload" href="inst_fs_service_worker-c-b523682f21.js" as="script" type="text/javascript"><script>
 //<![CDATA[
 (window.bundles || (window.bundles = [])).push('inst_fs_service_worker');
 //]]>
