--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -988,7 +988,7 @@
   <script>
 //<![CDATA[
 
-      ;["https://instructure-uploads.s3.amazonaws.com/account_128650000000000001/attachments/1528044/atomicsearch.js"].forEach(function(src) {
+      ;["atomicsearch.js"].forEach(function(src) {
         var s = document.createElement('script'); s.src = src; s.async = false;
         document.head.appendChild(s)
       });
