--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -382,8 +382,8 @@
       <tbody><tr>
         <td>
         Copy and paste or type your submission right here.
-            
-          <textarea width="100%" height="400px"></textarea>
+            <br>
+          <textarea width="1000px" height="400px"></textarea>
           
         </td>
       </tr><tr>
