--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -49,7 +49,7 @@
 </header>
 <nav id="mobileContextNavContainer"></nav>
 
-<header id="header" class="ic-app-header no-print ">
+<header id="header" class="ic-app-header no-print " style="width:70px">
   <a href="#content" id="skip_navigation_link">Skip To Content</a>
   <div role="region" class="ic-app-header__main-navigation" aria-label="Global Navigation">
       <div class="ic-app-header__logomark-container">
