--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -350,7 +350,7 @@
         <td colspan="2">
           <div class="textarea-emoji-container">
             <div class="textarea-container">
-              <textarea class="submission_comment_textarea" placeholder="Comments..." title="Additional comments" name="submission[comment]" id="submission_comment"></textarea>
+              <textarea style="height:50px" class="submission_comment_textarea" placeholder="Comments..." title="Additional comments" name="submission[comment]" id="submission_comment"></textarea>
               <span class="emoji-picker-container" style="display: none;"></span>
             </div>
             <div class="emoji-quick-picker-container" style="display: none;"></div>
