--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -1,5 +1,7 @@
 <html><head><link rel="stylesheet" media="screen" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/no_variables/bundles/fonts-43e9c545fc.css">
-<link rel="stylesheet" media="all" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/aabe2b6f9ed88c4f73677cf1b18d2605/variables-7dd4b80918af0e0218ec0229e4bd5873.css">
+
+  <title>Canvas</title>
+  <link rel="stylesheet" media="all" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/aabe2b6f9ed88c4f73677cf1b18d2605/variables-7dd4b80918af0e0218ec0229e4bd5873.css">
 <link rel="stylesheet" media="all" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/new_styles_normal_contrast/bundles/common-5a50100f64.css">
 <link rel="stylesheet" media="all" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/new_styles_normal_contrast/bundles/assignments-81a86619c8.css">
 <link rel="stylesheet" media="all" href="https://du11hjcvx0uqb.cloudfront.net/dist/brandable_css/new_styles_normal_contrast/bundles/tinymce-59c32fac15.css">
