--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -207,7 +207,7 @@
             <nav id="breadcrumbs" role="navigation" aria-label="breadcrumbs" style=""><ul><li class="home"><a href="/"><span class="ellipsible ellipsis" style="max-width: 140px;"><i class="icon-home" title="My Dashboard">
   <span class="screenreader-only">My Dashboard</span>
 </i>
-</span></a></li><li><a href="/courses/17906"><span class="ellipsible ellipsis" style="max-width: 140px;">IB Language HL</span></a></li><li><a href="/courses/17906/assignments"><span class="ellipsible ellipsis" style="max-width: 140px;">Assignments</span></a></li><li><a href="https://uaschools.instructure.com/courses/17906/assignments/212594"><span class="ellipsible ellipsis" style="max-width: 140px;">Unit 2 Map Assignment</span></a></li></ul></nav>
+</span></a></li><li><a href="/courses/17906"><span class="ellipsible ellipsis" style="max-width: 140px;">IB Language HL</span></a></li><li><a href="/courses/17906/assignments"><span class="ellipsible ellipsis" style="max-width: 140px;">Assignments</span></a></li><li><a href="https://uaschools.instructure.com/courses/17906/assignments/212594"><span class="ellipsible ellipsis" style="max-width: 140px;">Unit 2 Review Assignment</span></a></li></ul></nav>
         </div>
 
 
@@ -253,8 +253,7 @@
     <div class="assignment-title">
       <div class="title-content">
         <h1 class="title">
-          Unit 2 Map Assignment
-        </h1>
+Unit 2 Review Assignment        </h1>
       </div>
       <div class="assignment-buttons">
         
