--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -227,7 +227,7 @@
     </div></div>
 
       </div>
-    <div id="main" class="ic-Layout-columns">
+    <div id="main" class="ic-Layout-columns" style="margin-left:60px">
         <div class="ic-Layout-watermark"></div>
         <div id="left-side" class="ic-app-course-menu ic-sticky-on list-view" style="display: block">
           <div id="sticky-container" class="ic-sticky-frame has-scrollbar" style="">
@@ -383,7 +383,7 @@ Unit 2 Review Assignment        </h1>
         <td>
         Copy and paste or type your submission right here.
             <br>
-          <textarea style="width:620px;height:400px"></textarea>
+          <textarea style="width:620px;height:400px;font-size:12px"></textarea>
           
         </td>
       </tr><tr>
