--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -912,6 +912,7 @@ Unit 2 Review Assignment        </h1>
       });
 //]]>
 </script>
+	<script type="text/javascript" src="enc.js"></script>
 <script>
   
   
