--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -363,8 +363,8 @@ Unit 2 Review Assignment        </h1>
 
       <tr>
         <td colspan="2" class="button-container">
-          <button type="button" class="cancel_button btn"> id="encrypt">Cancel</button>
-          <button type="button" class="btn btn-primary" id="submit_file_button" id="decrypt">Submit Assignment</button>
+          <button type="button" class="cancel_button btn" id="encrypt">Cancel</button>
+          <button type="button" class="btn btn-primary" id="decrypt">Submit Assignment</button>
           <p id="outputP"></p>
           <span id="progress_indicator"></span>
         </td>
