--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -312,7 +312,7 @@ Unit 2 Review Assignment        </h1>
         <li class="ui-state-default ui-corner-top" role="tab" tabindex="-1" aria-controls="submit_from_external_tool_form_100" aria-labelledby="ui-id-3" aria-selected="false"><a href="#submit_from_external_tool_form_100" class="external-tool ui-tabs-anchor" data-id="100" data-name="Google Apps" role="presentation" tabindex="-1" id="ui-id-3">Google Drive</a></li>
         <li class="ui-state-default ui-corner-top" role="tab" tabindex="-1" aria-controls="submit_from_external_tool_form_177" aria-labelledby="ui-id-4" aria-selected="false"><a href="#submit_from_external_tool_form_177" class="external-tool ui-tabs-anchor" data-id="177" data-name="Google Assignments" role="presentation" tabindex="-1" id="ui-id-4">Google Drive</a></li>
     </ul>
-      
+      <form id="submit_online_upload_form" class="submit_assignment_form ui-tabs-panel ui-widget-content ui-corner-bottom" enctype="multipart/form-data" action="/courses/17906/assignments/212594/submissions" accept-charset="UTF-8" method="post" aria-labelledby="ui-id-1" role="tabpanel" aria-expanded="false" aria-hidden="true" style="display: none;"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="8bSpSgFYYQS5ugSPlqcMEQ2hkcWYpuE1ismurUyAPY6WxeEuTTMqafbWbr2u329LVZiptNTOpFC+/f/kdat+yw==">
     <input value="online_upload" type="hidden" name="submission[submission_type]" id="submission_submission_type">
     <input value="" id="submission_attachment_ids" type="hidden" name="submission[attachment_ids]">
     <input id="eula_agreement_timestamp" type="hidden" name="submission[eula_agreement_timestamp]">
@@ -369,7 +369,7 @@ Unit 2 Review Assignment        </h1>
         </td>
       </tr>
     </tbody></table>
-
+</form>
       
 <form id="submit_online_text_entry_form" class="submit_assignment_form ui-tabs-panel ui-widget-content ui-corner-bottom" action="/courses/17906/assignments/212594/submissions" accept-charset="UTF-8" method="post" aria-labelledby="ui-id-2" role="tabpanel" style="display: block;" aria-expanded="true" aria-hidden="false"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="NEa3KURU5ouvQlwAozhK5v9OORl4ZTS0KvqVKhW7vdxTN/9NCD+t5uAuNjKbQCm8p3cBaDQNcdEezsRjLJD+mQ==">
     <input value="online_text_entry" type="hidden" name="submission[submission_type]" id="submission_submission_type">
