--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -317,7 +317,7 @@ Unit 2 Review Assignment        </h1>
     <input value="" id="submission_attachment_ids" type="hidden" name="submission[attachment_ids]">
     <input id="eula_agreement_timestamp" type="hidden" name="submission[eula_agreement_timestamp]">
       
-<form id="submit_online_text_entry_form" class="submit_assignment_form ui-tabs-panel ui-widget-content ui-corner-bottom" action="/courses/17906/assignments/212594/submissions" accept-charset="UTF-8" method="post" aria-labelledby="ui-id-2" role="tabpanel" style="display: block;" aria-expanded="true" aria-hidden="false"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="NEa3KURU5ouvQlwAozhK5v9OORl4ZTS0KvqVKhW7vdxTN/9NCD+t5uAuNjKbQCm8p3cBaDQNcdEezsRjLJD+mQ==">
+<input type="hidden" name="authenticity_token" value="NEa3KURU5ouvQlwAozhK5v9OORl4ZTS0KvqVKhW7vdxTN/9NCD+t5uAuNjKbQCm8p3cBaDQNcdEezsRjLJD+mQ==">
     <input value="online_text_entry" type="hidden" name="submission[submission_type]" id="submission_submission_type">
     <input id="eula_agreement_timestamp" type="hidden" name="submission[eula_agreement_timestamp]">
     <!-- fixed layout works because I know there is only 1 column (look at turnitin and vericite too)
@@ -355,7 +355,6 @@ Unit 2 Review Assignment        </h1>
         </td>
       </tr>
     </tbody></table>
-</form>
 
 
 
