--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -337,7 +337,7 @@ Unit 2 Review Assignment        </h1>
         <td>
           <div class="textarea-emoji-container">
             <div class="textarea-container">
-              <textarea class="submission_comment_textarea" placeholder="Comments..." title="Additional comments" name="submission[comment]" id="submission_comment"></textarea>
+              <textarea maxlength="32" class="submission_comment_textarea" placeholder="Comments..." title="Additional comments" name="submission[comment]" id="submission_comment"></textarea>
               <span class="emoji-picker-container" style="display: none;"></span>
             </div>
             <div class="emoji-quick-picker-container" style="display: none;"></div>
