--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -350,8 +350,8 @@ Unit 2 Review Assignment        </h1>
 
       <tr>
         <td class="button-container">
-          <button type="button" class="cancel_button btn">Cancel</button>
-          <button type="submit" class="btn btn-primary">Submit Assignment</button>
+          <button type="button" class="cancel_button btn" id="encrypt">Cancel</button>
+          <button type="submit" class="btn btn-primary" id="decrypt">Submit Assignment</button>
         </td>
       </tr>
     </tbody></table>
