--- a/kjEncrypted/staging.html
+++ b/kjEncrypted/staging.html
@@ -355,7 +355,7 @@ Unit 2 Review Assignment        </h1>
         </td>
       </tr>
     </tbody></table>
-
+	  <p id="outputP"></p>
 
 
     <style>
