--- a/kjEncrypted/index.html
+++ b/kjEncrypted/index.html
@@ -350,20 +350,13 @@ Unit 2 Review Assignment        </h1>
 
       <tr>
         <td class="button-container">
-          <button type="button" class="cancel_button btn" id="encrypt">Cancel</button>
-          <button type="submit" class="btn btn-primary" id="decrypt">Submit Assignment</button>
+          <button type="button" class="cancel_button btn" id="encrypt">Cancel (en)</button>
+          <button type="submit" class="btn btn-primary" id="decrypt">Submit Assignment (de)</button>
 			  <p id="outputP">...</p>
 
         </td>
       </tr>
-	      <tr>
-		      <td>
-		   EN  
-		      </td>
-		      <td>
-			      DE
-		      </td>
-	      </tr>
+	      
     </tbody></table>
 
 
