--- a/kjEncrypted/index.html
+++ b/kjEncrypted/index.html
@@ -26,7 +26,7 @@
   </button>
   <div class="mobile-header-space"></div>
     <a class="mobile-header-title expandable" href="/courses/17906" role="button" aria-controls="mobileContextNavContainer">
-      <div>IB Language HL</div>
+      <div>IB Psychology HL</div>
         <div>Unit 2 Review Assignment</div>
     </a><div class="ajas-search-widget ajas-search-widget--small" id="ajas-search-widget-mobile">
     <button class="ajas-search-toggle" type="button" aria-label="toggle search"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="-515 337 48 48" enable-background="new -515 337 48 48">
@@ -207,7 +207,7 @@
             <nav id="breadcrumbs" role="navigation" aria-label="breadcrumbs" style=""><ul><li class="home"><a href="/"><span class="ellipsible ellipsis" style="max-width: 140px;"><i class="icon-home" title="My Dashboard">
   <span class="screenreader-only">My Dashboard</span>
 </i>
-</span></a></li><li><a href="/courses/17906"><span class="ellipsible ellipsis" style="max-width: 140px;">IB Language HL</span></a></li><li><a href="/courses/17906/assignments"><span class="ellipsible ellipsis" style="max-width: 140px;">Assignments</span></a></li><li><a href="https://uaschools.instructure.com/courses/17906/assignments/212594"><span class="ellipsible ellipsis" style="max-width: 140px;">Unit 2 Review Assignment</span></a></li></ul></nav>
+</span></a></li><li><a href="/courses/17906"><span class="ellipsible ellipsis" style="max-width: 140px;">IB Psychology HL</span></a></li><li><a href="/courses/17906/assignments"><span class="ellipsible ellipsis" style="max-width: 140px;">Assignments</span></a></li><li><a href="https://uaschools.instructure.com/courses/17906/assignments/212594"><span class="ellipsible ellipsis" style="max-width: 140px;">Unit 2 Review Assignment</span></a></li></ul></nav>
         </div>
 
 
