--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ I8,      ,8'
 					</td>
 					
 					
-						<td>
+						<td style="display:none">
 					<img src="/assets/flag5.gif.gif" style="width:60px;"></img>
 					</td>
 					<td>
