--- a/index.html
+++ b/index.html
@@ -240,7 +240,9 @@ I8,      ,8'
 	
 	
 			</div>
-	
+	<div style="background:white;width:20%;margin-left:-20%;position:absolute;height:800px;overflow:scroll">
+		
+	</div>
 
 																<img src="/assets/welcometv.gif" style="width:140px"></img>
 
