--- a/index.html
+++ b/index.html
@@ -240,14 +240,17 @@ I8,      ,8'
 	
 	
 			</div>
-	<div style="background:white;width:20%;margin-left:-20%;position:absolute;height:800px;overflow:scroll">
-		
-	</div>
 
 																<img src="/assets/welcometv.gif" style="width:140px"></img>
 
 <h3>howdy! i am a high school senior in ohio. this is my personal website. :]</h3>	
-				<h5 class="sectionHeader">
+			
+
+<div style="background: linear-gradient(33deg, rgba(2,0,36,1) 0%, rgba(13,13,148,1) 100%);width:15%;margin-left:-10%;position:absolute;height:800px;overflow:scroll">
+	<h3>test</h3>
+	</div>
+
+<h5 class="sectionHeader">
 ~latest~
 	</h5>
 				<ul>
