--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ I8,      ,8'
 <h3>howdy! i am a high school senior in ohio. this is my personal website. :]</h3>	
 			
 
-<div style="color:white;  font-family: "Times New Roman", Times, serif; background: linear-gradient(33deg, rgba(2,0,36,1) 0%, rgba(13,13,148,1) 100%);width:15%;margin-left:-10%;position:absolute;height:800px;overflow:scroll">
+<div style="color:white;font-family: 'Times New Roman', Times, serif; background: linear-gradient(33deg, rgba(2,0,36,1) 0%, rgba(13,13,148,1) 100%);width:15%;margin-left:-10%;position:absolute;height:800px;overflow:scroll">
 	<h3>test</h3>
 	</div>
 
